public class Cargo {
    // Attributes
    protected String sn;

    // Constructor
    public Cargo() {
    }

    public Cargo(String sn) {
        this.sn = sn;
    }

    // Getter and setter
    public String getSn() {
        return this.sn;
    }

    public void setSn(String sn) {
        this.sn = sn;
    }
    
}
